Fix floaty header overflowing

--- a/assets/css/custom-inputs.css
+++ b/assets/css/custom-inputs.css
@@ -456,6 +456,7 @@ dialog .input-subtitle {
 .floaty-header .title * {
     margin: 0;
     color: rgb(255 255 255 / 75%);
+    overflow-wrap: anywhere;
 }
 .floaty-body {
     background-color: rgb(0 0 0 / 10%);
